wasm/fastq_to_fasta_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_lpjrozx9/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/a4417b20da5dac1be6748741dec6c8508be412b8.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/a4417b20da5dac1be6748741dec6c8508be412b8.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/ab74f5dbc96832992cd9fd1e209ccb75d04d15c7.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/ab74f5dbc96832992cd9fd1e209ccb75d04d15c7.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/e643750a255fa42662238c55d777d696a9ac50a2.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/e643750a255fa42662238c55d777d696a9ac50a2.json" for subsequent builds)
cache:INFO:  - ok
